--- a/conf/docker.yaml
+++ b/conf/docker.yaml
@@ -5,9 +5,14 @@ plugins: /verdaccio/plugins
 listen:
   - 0.0.0.0:4873
 
+web:
+  enable: true
+  title: appricot - NPM registry
+  logo: https://storage.yandexcloud.net/appricot.ru/img/logo-wide.png
+
 auth:
   gitlab:
-    url: http://gitlab
+    url: https://gitlab.com
     authCache:
       enabled: true
       ttl: 300
