--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,8 @@
 version: '3'
 
 services:
-  gitlab:
-    image: 'gitlab/gitlab-ce:nightly'
-    restart: always
-    environment:
-      - GITLAB_ROOT_PASSWORD=verdaccio
-    ports:
-      - '50080:80'
-      - '50022:22'
-    volumes:
-      - gitlab-config:/etc/gitlab
-      - gitlab-log:/var/log/gitlab
-      - gitlab-data:/var/opt/gitlab
-
   verdaccio:
+    image: cr.yandex/crp3htsb576q3sp0eub8/verdaccio:dev
     restart: always
     ports:
       - '4873:4873'
@@ -23,11 +11,6 @@ services:
       dockerfile: Dockerfile
     volumes:
       - verdaccio-storage:/verdaccio/storage
-    links:
-      - gitlab
 
 volumes:
-  gitlab-config:
-  gitlab-log:
-  gitlab-data:
   verdaccio-storage:
